# zephyr-ft9001-public

./: CMakeLists.txt  README.md
doc/FT9001_Programming_Guide/: FT9001_Programming_Guide.md
doc/FT9001_Programming_Guide/Test_Firmware/: zephyr.hex
drivers/clock_control/: Kconfig  Kconfig.ft
drivers/counter/: CMakeLists.txt  Kconfig.ft
drivers/entropy/: Kconfig.ft
drivers/gpio/: gpio_ft.c
drivers/hwinfo/: hwinfo_ft.c
drivers/otp/: Kconfig.ft
drivers/pinctrl/: Kconfig.ft
drivers/reset/: CMakeLists.txt  Kconfig
drivers/serial/: Kconfig.ft
drivers/usb/udc/: Kconfig.ft
drivers/watchdog/: CMakeLists.txt
dts/bindings/clock/: ft,ft90-rcc.yaml
dts/bindings/counter/: ft,ft90-timer.yaml
dts/bindings/gpio/: ft,ft90-gpio.yaml
dts/bindings/misc/: ft,ft90-ftcfg.yaml
dts/bindings/pinctrl/: ft,ft90-pinctrl.yaml
dts/bindings/reset/: ft,ft90-rctl.yaml
dts/bindings/spi/: ft,ft90-spi.yaml
dts/bindings/usb/: ft,ft90-usb.yaml
focaltech/: Kconfig
focaltech/drivers/: CMakeLists.txt  Kconfig
focaltech/drivers/clock_control/: CMakeLists.txt  Kconfig.ft  clock_control_ft.c
focaltech/drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.ft  counter_ft_timer.c
focaltech/drivers/entropy/: CMakeLists.txt  Kconfig  entropy_ft.c
focaltech/drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.ft  flash_driver.h  flash_ft_ft90.c
focaltech/drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.ft  gpio_ft.c
focaltech/drivers/hwinfo/: CMakeLists.txt  Kconfig  Kconfig.ft  hwinfo_ft.c
focaltech/drivers/otp/: CMakeLists.txt  Kconfig  otp_ft.c  otp_ft.h
focaltech/drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.ft  pinctrl_ft.c
focaltech/drivers/reset/: CMakeLists.txt  Kconfig.ft  reset_ft.c
focaltech/drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.ft  uart_ft.c
focaltech/drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.ft  spi_ft.c
focaltech/drivers/usb/: CMakeLists.txt  Kconfig
focaltech/drivers/usb/udc/: CMakeLists.txt  Kconfig  Kconfig.ft  udc_ft.c
focaltech/drivers/watchdog/: CMakeLists.txt  Kconfig  Kconfig.ft  wdt_ft.c
focaltech/dts/bindings/: vendor-prefixes.txt
focaltech/hal/: CMakeLists.txt  Kconfig.ft
focaltech/hal/ft/: CMakeLists.txt
focaltech/hal/ft/ft90/ft9001/standard_peripheral/source/: CMakeLists.txt
focaltech/hal/ft/ft90/ft9001/standard_peripheral/source/drv/: GetSN.c  cache_drv.c  cpm_drv.c  dmac_drv.c  eport_drv.c  libft9001.c  lowpower_drv.c  reset_drv.c  spi_drv.c  tc_drv.c  trng_drv.c  uart_drv.c  usb_drv.c  wdt_drv.c
focaltech/hal/ft/ft90/ft9001/standard_peripheral/source/drv/inc/: cache_drv.h  cache_reg.h  cpm_drv.h  cpm_reg.h  dmac_drv.h  dmac_reg.h  eport_drv.h  eport_reg.h  ioctrl_reg.h  libAlgorithm.h  libDisJTAG.h  libGetSN.h  libft9001.h  lowpower_drv.h  reset_drv.h  reset_reg.h  rtc_reg.h  spi_drv.h  spi_reg.h  ssi_drv.h  ssi_reg.h  tc_drv.h  tc_reg.h  trng_drv.h  uart_drv.h  uart_reg.h  usb_drv.h  usb_reg.h  usi_reg.h  wdt_drv.h  wdt_reg.h
focaltech/include/: ft_trace.h
focaltech/mock/test/: Kconfig  ft_flash_test.c  test_ft.c
focaltech/soc/ft/: Kconfig  (+4 more)
focaltech/zephyr/: module.yml
mock/: CMakeLists.txt  Kconfig  Kconfig.mock
mock/test/: CMakeLists.txt  Kconfig.test  flash_driver.h  gpio_drv.h  spi_drv.h
soc/ft/: Kconfig.soc
(+103 files in other folders)
